--- a/src/demo/demo.vcxproj.filters
+++ b/src/demo/demo.vcxproj.filters
@@ -20,6 +20,12 @@
     <ClInclude Include="demo.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="import.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="stdmethod.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -31,5 +37,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="demo.html" />
+    <None Include="..\..\README.md" />
   </ItemGroup>
 </Project>
