--- a/src/demo/demo.vcxproj
+++ b/src/demo/demo.vcxproj
@@ -92,13 +92,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="demo.h" />
+    <ClInclude Include="ieutil.h" />
     <ClInclude Include="import.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stdmethod.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="d2dwindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="d2dwindow.cpp" />
     <ClCompile Include="demo.cpp" />
+    <ClCompile Include="ieutil.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
