--- a/src/dllmodule/dllmodule.vcxproj
+++ b/src/dllmodule/dllmodule.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{A34D8627-E88B-4DF8-8BDB-9F39CD9AE31B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>dllmodule</RootNamespace>
+    <ProjectName>pasta</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
