--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -74,11 +74,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="interfaces.h" />
+    <ClInclude Include="shiori_agent.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="iehostwindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="shiori_agent.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
