--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="interfaces.h" />
+    <ClInclude Include="messages.h" />
     <ClInclude Include="shiori_agent.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
