--- a/src/core/core.vcxproj.filters
+++ b/src/core/core.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="shiori_agent.h">
       <Filter>agent</Filter>
     </ClInclude>
+    <ClInclude Include="messages.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
