--- a/src/demo/demo.vcxproj
+++ b/src/demo/demo.vcxproj
@@ -42,11 +42,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\externals\dx\;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\externals\dx\;$(IncludePath);C:\wintools\dev\WTL\Include;</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\externals\dx\;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\externals\dx\;$(IncludePath);C:\wintools\dev\WTL\Include;</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
