--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="messages.h" />
     <ClInclude Include="shiori_agent.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="stdmethod.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="iehostwindow.h" />
   </ItemGroup>
