--- a/src/core/core.vcxproj.filters
+++ b/src/core/core.vcxproj.filters
@@ -14,6 +14,9 @@
     <Filter Include="ie">
       <UniqueIdentifier>{649fe110-f9c9-4851-b293-4fab90cd501d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="lib">
+      <UniqueIdentifier>{28070538-83ad-4bc8-9c9e-ae87290e8d6f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -40,6 +43,9 @@
     <ClInclude Include="stdmethod.h">
       <Filter>etc</Filter>
     </ClInclude>
+    <ClInclude Include="fileio.h">
+      <Filter>lib</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -50,6 +56,9 @@
     </ClCompile>
     <ClCompile Include="shiori_agent.cpp">
       <Filter>agent</Filter>
+    </ClCompile>
+    <ClCompile Include="fileio.cpp">
+      <Filter>lib</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
