--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -71,11 +71,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="interfaces.h" />
     <ClInclude Include="shiori_agent.h" />
+    <ClInclude Include="shiori_messages.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="iehostwindow.h" />
