--- a/src/core/core.vcxproj.filters
+++ b/src/core/core.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClInclude Include="fileio.h">
       <Filter>lib</Filter>
     </ClInclude>
+    <ClInclude Include="import.h">
+      <Filter>etc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
