--- a/src/core/core.vcxproj.filters
+++ b/src/core/core.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="ie_init.cpp">
       <Filter>ie</Filter>
     </ClCompile>
+    <ClCompile Include="ie_regkey.cpp">
+      <Filter>ie</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="index.html" />
