--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="import.h" />
     <ClInclude Include="interfaces.h" />
     <ClInclude Include="messages.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="shiori_agent.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stdmethod.h" />
@@ -105,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="index.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="core.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
