--- a/src/core/core.vcxproj.filters
+++ b/src/core/core.vcxproj.filters
@@ -47,6 +47,12 @@
       <Filter>etc</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="atlhostex.h">
+      <Filter>ie</Filter>
+    </ClInclude>
+    <ClInclude Include="ie_presentsite.h">
+      <Filter>ie</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
