一旦コミット

--- a/src/core/core.vcxproj
+++ b/src/core/core.vcxproj
@@ -40,10 +40,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(WTL_PATH)Include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(WTL_PATH)Include;$(SolutionDir)..\externals\dx</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(WTL_PATH)Include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(WTL_PATH)Include;$(SolutionDir)..\externals\dx</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -82,7 +82,9 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="atlhostex.h" />
     <ClInclude Include="fileio.h" />
+    <ClInclude Include="ie_presentsite.h" />
     <ClInclude Include="import.h" />
     <ClInclude Include="interfaces.h" />
     <ClInclude Include="messages.h" />
