--- a/cs_src/shiori/shiori.vcxproj
+++ b/cs_src/shiori/shiori.vcxproj
@@ -80,6 +80,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ClrHost.h" />
+    <ClInclude Include="HostControl.h" />
     <ClInclude Include="shiori.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -95,6 +96,11 @@
   <ItemGroup>
     <ProjectReference Include="..\NSLoader\NSLoader.csproj">
       <Project>{30f47e01-ae3f-40af-bb16-40923ce82e3f}</Project>
+      <Private>true</Private>
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <CopyLocalSatelliteAssemblies>true</CopyLocalSatelliteAssemblies>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+      <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
