--- a/clrhosting_src/SampleAppLauncher/SampleAppLauncher.vcxproj
+++ b/clrhosting_src/SampleAppLauncher/SampleAppLauncher.vcxproj
@@ -88,6 +88,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SampleAppDomainManager\SampleAppDomainManager.csproj">
+      <Project>{20bf7907-b920-4f50-a839-6638f56b8544}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
