--- a/cs_src/NSLoader/NSLoader.csproj
+++ b/cs_src/NSLoader/NSLoader.csproj
@@ -31,10 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>NSLoader.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,9 +50,6 @@
     <Compile Include="IShiori1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShioriAppDomainManager.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="NSLoader.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
