うまくいかないので忘れる

--- a/cs_src/shiori/shiori.vcxproj
+++ b/cs_src/shiori/shiori.vcxproj
@@ -96,9 +96,9 @@
   <ItemGroup>
     <ProjectReference Include="..\NSLoader\NSLoader.csproj">
       <Project>{30f47e01-ae3f-40af-bb16-40923ce82e3f}</Project>
-      <Private>true</Private>
-      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
-      <CopyLocalSatelliteAssemblies>true</CopyLocalSatelliteAssemblies>
+      <Private>false</Private>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
       <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
     </ProjectReference>
