--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: dot.station@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
   このサイトは主に2000年代初頭に発生した、
   えちょの嗜好についての諸々をgithubが続く限り残し続ける場所です。
+  世界のエントロピー上昇に貢献します。
 
 # social links
 twitter_username: ekicyou
