--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: ruby
-cache: bundler
-sudo: false
-rvm: 2.4
+rvm:
+  - 2.4
 
-install: script/bootstrap
-script: script/cibuild
+script: "bundle exec jekyll build"
