--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,12 @@ minima:
 #header_pages:
 # - about.md
 
+# Disqus Comments
+disqus:
+  # Leave shortname blank to disable comments site-wide.
+  # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+  shortname: echiyonozangai
+
 # Build settings
 theme: jekyll-theme-minimal
 markdown: GFM
