--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ disqus:
 
 # Build settings
 # theme: jekyll-theme-minimal
-remote_theme: pages-themes/modernist@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 markdown: GFM
 
 plugins:
