--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ disqus:
 
 # Build settings
 remote_theme: pages-themes/minimal@v0.2.0
-markdown: GFM
+markdown: kramdown
 
 plugins:
 - jekyll-feed
